--- a/src/app/features/components/dashboard/general-overview/general-overview.component.scss
+++ b/src/app/features/components/dashboard/general-overview/general-overview.component.scss
@@ -563,6 +563,7 @@
   border-radius: 8px;
   margin-bottom: 12px;
   box-shadow: var(--shadow-light);
+  overflow: hidden;
 
   .panel-label {
     font-weight: 600;
